--- a/hadoop-yarn-project/CHANGES.txt
+++ b/hadoop-yarn-project/CHANGES.txt
@@ -220,7 +220,10 @@ Branch YARN-2928: Timeline Server Next Generation: Phase 1
     YARN-4622. TestDistributedShell fails for v2 test cases after modifications for 1.5.
     (Naganarasimha G R via varunsaxena)
 
-    YARN-4238. createdTime and modifiedTime is not reported while publishing entities to ATSv2.
+    YARN-4238. correctly set createdTime and remove modifiedTime when publishing entities.
+    (Varun Saxena via Naganarasimha G R)
+
+    YARN-4644. TestRMRestart fails and findbugs issue in YARN-2928 branch.
     (Varun Saxena via Naganarasimha G R)
 
 Trunk - Unreleased
